PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Valid/FunctionDeclarations.pf
module DataStructures{

    x Int = 9

    fun foo(Int input):Int{
        return input + 2
    }

    fun foo2(Int input, Int input2):Int{
        return input + input2
    }

    fun foo3(Int input, Int input2):Int{
        sum Int
        sum = input + input2
        return sum
    }

    fun main() : Int {
        print({foo(x)})
        print({foo2(x, x)})
        print({foo3(x, x)})
        return 0
    }
}