PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Invalid_Function_no_dots.pf
module DataStructures{

     fun foo(Int input)Int{
        return input + 2
    }

    mainFun(){

    }
}